:white_check_mark: Sel ou Poivre, vérification de si la réponse séléctionnée est bonne ou non

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,16 @@
       <img mat-card-image src="assets/images/1024px-Logo_IUT_Lens.svg.png">
     </mat-card>
   </mat-grid-tile>
-  <mat-grid-tile>
+  <!--<mat-grid-tile>
     <mat-card [routerLink]="['/question/7']">
+      <mat-card-header>
+        <mat-card-title>Jeu :</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="assets/images/1024px-Logo_IUT_Lens.svg.png">
+    </mat-card>
+  </mat-grid-tile>-->
+  <mat-grid-tile>
+    <mat-card [routerLink]="['/question']">
       <mat-card-header>
         <mat-card-title>Jeu :</mat-card-title>
       </mat-card-header>
