--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -10,8 +10,9 @@
 </mat-card>
 
 <mat-grid-list cols="2" rowHeight="2:1" *ngIf="!loading">
-  <mat-grid-tile
-    *ngFor="let reponse of reponses">
-    <app-reponses [reponse]="reponse"></app-reponses>
-  </mat-grid-tile>
+    <mat-grid-tile *ngFor="let reponse of reponses">
+      <button (click) = getChoixJoueur(reponse)>
+        <app-reponses [reponse]="reponse"></app-reponses>
+      </button>
+    </mat-grid-tile>
 </mat-grid-list>
