--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -9,9 +9,13 @@
   </mat-card-content>
 </mat-card>
 
-<mat-grid-list cols="2" rowHeight="2:1" *ngIf="!loading">
-  <mat-grid-tile
-    *ngFor="let reponse of reponses">
-    <app-reponses [reponse]="reponse"></app-reponses>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="grid grid-cols-1 pr-32 pl-32 text-white font-bold text-2xl">
+  <mat-grid-list cols="2" rowHeight="3:1" *ngIf="!loading">
+    <mat-grid-tile
+      *ngFor="let reponse of reponses">
+      <app-reponses [reponse]="reponse"></app-reponses>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+
+
