:white_check_mark: Registration

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -11,7 +11,7 @@
 
 <label for="pseudo">Pseudo : </label>
   <input  id="pseudo" type="text" placeholder="ex: mohammed" #pseudo>
-<button (click)="addJoueur(pseudo)">ajoutez joueur</button>
+<button (click)="addJoueur(groupe,pseudo)">ajoutez joueur</button>
 <p *ngIf="message!=''" >
   {{message}}
 </p>
@@ -21,7 +21,7 @@
   <li *ngFor="let jouer of lesJoueurs"> {{jouer}}</li>
 </ul>
 
-<button>Création de l'équipe </button>
+<button (click)="addEquipe_Joueur(groupe)">Création de l'équipe </button>
 
 
 
