--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -22,6 +22,8 @@
 </ul>
 
 <button>Création de l'équipe </button>
+<br>
+<button (click)="afficherLesJoueurs()"> test afficher équipe dans le terminal </button>
 
 
 
