--- a/src/app/classement/classement.component.html
+++ b/src/app/classement/classement.component.html
@@ -4,7 +4,7 @@
     <mat-tab label="Meilleurs Joueurs">
       <mat-card style="text-align: center">
         <mat-card-title>Le classement des meilleurs joueurs :</mat-card-title>
-        <table mat-table [dataSource]="dataSourcePlayers" class="mat-elevation-z8" matSort>
+        <table mat-table [dataSource]="dataSourcePlayers" class="mat-elevation-z8"  t>
           <!-- Pseudo -->
           <ng-container matColumnDef="pseudo">
             <th mat-header-cell *matHeaderCellDef> Joueur </th>
@@ -14,7 +14,7 @@
           <!-- Score -->
           <ng-container matColumnDef="score">
             <th   mat-header-cell *matHeaderCellDef> Score </th>
-            <td mat-cell *matCellDef="let element" mat-sort-header> {{element.score}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.score}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumnsPlayers"></tr>
@@ -25,7 +25,7 @@
     <mat-tab label="Pires Joueurs">
       <mat-card style="text-align: center">
         <mat-card-title>Le classement des pires joueurs :</mat-card-title>
-        <table mat-table [dataSource]="dataSourcePlayers" class="mat-elevation-z8" matSort>
+        <table mat-table [dataSource]="dataSourcePlayers" class="mat-elevation-z8"  t>
           <!-- Pseudo -->
           <ng-container matColumnDef="pseudo">
             <th mat-header-cell *matHeaderCellDef> Joueur </th>
@@ -35,7 +35,7 @@
           <!-- Score -->
           <ng-container matColumnDef="score">
             <th   mat-header-cell *matHeaderCellDef> Score </th>
-            <td mat-cell *matCellDef="let element" mat-sort-header> {{element.score}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.score}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumnsPlayers"></tr>
@@ -49,7 +49,7 @@
   <mat-tab label="Meilleurs Equipes">
     <mat-card style="text-align: center">
       <mat-card-title>Le classement des meilleurs équipes :</mat-card-title>
-      <table mat-table [dataSource]="dataSourceTeams" class="mat-elevation-z8" matSort>
+      <table mat-table [dataSource]="dataSourceTeams" class="mat-elevation-z8" >
         <!-- Pseudo -->
         <ng-container matColumnDef="nom">
           <th mat-header-cell *matHeaderCellDef> Nom </th>
@@ -58,7 +58,7 @@
         <!-- Score -->
         <ng-container matColumnDef="score">
           <th   mat-header-cell *matHeaderCellDef> Score </th>
-          <td mat-cell *matCellDef="let element" mat-sort-header> {{sommePointsEquipes(element.id_equipe)}} </td>
+          <td mat-cell *matCellDef="let element"  > {{sommePointsEquipes(element.id_equipe)}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
@@ -69,7 +69,7 @@
   <mat-tab label="Pires Equipes">
     <mat-card style="text-align: center">
       <mat-card-title>Le classement des pires équipes :</mat-card-title>
-      <table mat-table [dataSource]="dataSourceTeams" class="mat-elevation-z8" matSort>
+      <table mat-table [dataSource]="dataSourceTeams" class="mat-elevation-z8">
         <!-- Pseudo -->
         <ng-container matColumnDef="nom">
           <th mat-header-cell *matHeaderCellDef> Nom </th>
@@ -78,7 +78,7 @@
         <!-- Score -->
         <ng-container matColumnDef="score">
           <th mat-header-cell *matHeaderCellDef> Score </th>
-          <td mat-cell *matCellDef="let element" mat-sort-header> {{sommePointsEquipes(element.id_equipe)}} </td>
+          <td mat-cell *matCellDef="let element"  > {{sommePointsEquipes(element.id_equipe)}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
