--- a/src/app/quizz/quizz.component.html
+++ b/src/app/quizz/quizz.component.html
@@ -1,16 +1,17 @@
-<form class="flex flex-col justify-center items-center pt-16 space-y-8 text-center" (submit)="onSubmit()">
+<form class="flex flex-col justify-center items-center pt-16 space-y-8 text-center">
   <div>
     <label for="poivre" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Nombre de questions sel et poivre</label>
     <input [(ngModel)]="poivre" type="number" name="poivre" id="small-input" class="block p-2 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
   <div>
     <label for="nuggets" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Nombre de questions nuggets</label>
-    <input [(ngModel)]="nuggets" type="number" name="nuggets" id="small-input" class="block p-2 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+    <input [(ngModel)]="nugget" type="number" name="nuggets" id="small-input" class="block p-2 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
   <div>
     
     <label for="small-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Valeur du miam</label>
     <input [(ngModel)]="miam" name="miam" type="number" id="small-input" class="block p-2 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Jouer</button>
+  <button [routerLink]="['/question', poivre, nugget]" type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Jouer</button>
 </form>
+
