:white_check_mark: Integration v2

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     </mat-card>
   </mat-grid-tile>
   <mat-grid-tile>
-    <mat-card [routerLink]="['/quizz']">
+    <mat-card [routerLink]="['/registration/']">
       <img mat-card-image class="bg-red-700 rounded-lg transition duration-500 hover:scale-125 hover:cursor-pointer" src="assets/images/burger.png">
     </mat-card>
   </mat-grid-tile>
