--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -21,7 +21,7 @@
   <li *ngFor="let jouer of lesJoueurs"> {{jouer}}</li>
 </ul>
 
-<button [routerLink]="['/question/7']" >Création de l'équipe </button>
+<button [routerLink]="['/quizz']" >Création de l'équipe </button>
 <br>
 
 
