--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -34,7 +34,10 @@
   <ul>
     <li *ngFor="let jouer of lesJoueurs2"> {{jouer}}</li>
   </ul>
+  <button mat-raised-button color="primary" [routerLink]="['/quizz']">Lancez le jeu</button>
 </div>
+
+
 
 
 
